Fri Feb 21 16:47:35 1997  Miles Bader  <miles@gnu.ai.mit.edu>

	* main.c (netfs_append_args): Present the remote filesystem as a
	single argument, in HOST:FS format.

Wed Feb 12 13:53:42 1997  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* ops.c (netfs_check_open_permissions): If this is a new node,
	don't report an error here.  (Though, later I/O requests still
	might fail.)

Wed Nov 20 17:13:59 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* Makefile (HURDLIBS): Add iohelp.

Mon Nov 18 17:01:38 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* ops.c (guess_mode_use): Delete function.
	(netfs_report_access): Use fshelp_access instead of
	guess_mode_use.  Change return type.

Sat Nov 16 18:24:55 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* Makefile (SRCS): Remove `cred.c'.
	* cred.c: Delete file.
	* nfs.h (struct netcred): Delete type.
	(cred_has_uid, cred_has_gid): Delete functions.
	(nfs_initialize_rpc): netcred arg now iouser.
	* ops.c: Change struct netcred to struct iouser throughout.
	* pager.c: Likewise.
	* cache.c (netfs_node_norefs): Likewise.
	* nfs.c (nfs_initialize_rpc): Convert use of netcred to iouser.

Mon Nov  4 21:23:58 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* rpc.c	(rpc_list_lock): Delete variable.  Omit all mention of it
	throughout this file.  Expand the use of outstanding_lock to cover
	what rpc_list_lock used to handle.

Fri Nov  1 18:12:21 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* rpc.c (conduct_rpc): Unlock OUTSTANDING_LOCK if write fails.

Wed Oct 30 18:25:18 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* ops.c (netfs_attempt_statfs): Convert incoming numbers from
	network to host byte order.
	Don't convert sizes from IOSIZE to BSIZE units.
	Return BSIZE in f_bsize field, not IOSIZE.
	Fill in f_fsid field.

Thu Oct 24 23:01:35 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* main.c (runtime_argp_children): New variable.
	(runtime_argp_parents): Variable removed.